<resources>
    <string name="app_name">멍노트</string>

    <string name="bottom_menu_record">기록</string>

    <string name="bottom_menu_receipt">소비</string>

    <string name="bottom_menu_togo">산책</string>

    <string name="bottom_menu_community">커뮤니티</string>

    <string name="bottom_menu_my">MY</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>

    <string name="msg_token_fmt" translatable="false">토큰: %s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_write_specific_community">WriteSpecificCommunityActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="weather_url">http://api.openweathermap.org/</string>
    <string name="weather_app_id">0fd049ed291f9069c321e2d10a9c2d4b</string>
</resources>