<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/note_tab"
        android:icon="@drawable/ic_note"
        android:title="@string/bottom_menu_record" />

    <item
        android:id="@+id/receipt_tab"
        android:icon="@drawable/ic_receipt"
        android:title="@string/bottom_menu_receipt" />

    <item
        android:id="@+id/walk_tab"
        android:icon="@drawable/ic_walk"
        android:title="@string/bottom_menu_togo" />

    <item
        android:id="@+id/community_tab"
        android:icon="@drawable/ic_community"
        android:title="@string/bottom_menu_community" />

    <item
        android:id="@+id/my_tab"
        android:icon="@drawable/ic_my"
        android:title="@string/bottom_menu_my" />

</menu>